syntax = "proto3";

package jwt;

option java_multiple_files = true;
option java_package = "com.careerseekers.grpc.jwt";
option java_outer_classname = "JwtServiceProto";

service JwtService {
  rpc GetAllJwtTokens (Empty) returns (JwtTokensList);
}

message Empty {}

message JwtToken {
  int64 id = 1;
  string email = 2;
  string role = 3;
  string uuid = 4;
  string token = 5;
}

message JwtTokensList {
  repeated JwtToken tokens = 1;
}